# synto

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASE.md  install.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: benchmark.yml  ci.yml  release.yml
docs/: web-clipper-setup.md
scripts/: benchmark.sh  compare_smoke.sh  mcp_smoke.py  portability_smoke.py  release.sh  smoke_feature_concept_identity.sh  smoke_feature_concept_rename.sh  smoke_feature_pdf_import.sh  smoke_feature_relation_graph.sh  smoke_per_role_providers.sh  smoke_source_overrides.sh  smoke_test.sh
src/synto/: anthropic_compat_client.py  api_keys.py  cache.py  cli.py  client_factory.py  concept_text.py  config.py  engines.py  git_ops.py  global_config.py  indexer.py  markdown_math.py  metrics.py  models.py  ollama_client.py  openai_compat_client.py  pack_export.py  paths.py  pricing.py  protocols.py  providers.py  readers.py  sanitize.py  (+6 more)
tests/: conftest.py  test_26_relation_extraction.py  test_27_concept_graph.py  test_29_pack_doctor.py  test_42_verbatim_source_mcp.py  test_anthropic_compat_client.py  test_article_quality_frontmatter.py  test_benchmarks.py  test_cli_compile.py  test_cli_concept_rename.py  test_cli_maintain.py  test_cli_messaging.py  test_cli_migrate_olw.py  test_cli_model_flags.py  test_cli_query.py  test_cli_reject.py  test_cli_set_default_vault.py  test_cli_status.py  test_cli_support.py  test_cli_undo.py  test_client_factory.py  test_compare_cli.py  test_compare_contestant_toml.py  test_compare_metrics.py  test_compare_report.py  test_compare_runner.py  test_compare_safety.py  test_compile.py  test_compile_lineage.py  test_compile_v2.py  test_concept_alias.py  test_concept_attribution.py  test_concept_entity_layer.py  test_concept_rename.py  test_config.py  test_connection_retry.py  test_console_encoding.py  test_cross_os_portability_v17.py  test_git_ops.py  test_git_ops_extra.py  (+76 more)
(+39 files in other folders)
